--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,9 @@
 body {
     background-color: cornsilk;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+img {
+    display: block;
+    width: 250px;
+    margin: 10px;
 }
